--- a/netconf/shaded-exificient/pom.xml
+++ b/netconf/shaded-exificient/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <groupId>org.opendaylight.odlparent</groupId>
         <artifactId>bundle-parent</artifactId>
-        <version>5.0.2</version>
+        <version>6.0.0</version>
         <relativePath/>
     </parent>
 
@@ -21,6 +21,12 @@
     <packaging>bundle</packaging>
     <version>1.8.0-SNAPSHOT</version>
     <name>${project.artifactId}</name>
+
+    <properties>
+        <!-- We are just juggling classes here -->
+        <odlparent.modernizer.skip>true</odlparent.modernizer.skip>
+        <odlparent.spotbugs.skip>true</odlparent.spotbugs.skip>
+    </properties>
 
     <dependencies>
         <dependency>
